fixing iframes so they don't pop out on mobile devices

--- a/source/stylesheets/examples.sass
+++ b/source/stylesheets/examples.sass
@@ -175,7 +175,7 @@
 
   input, select, progress
     display: block
-    margin-bottom: 3em
+    margin-bottom: 2em
 
   .template, .code
     height: 110px
